# manga-updater-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
db/init/: init.sql
migrations/: 20230812123349_initial_db.down.sql  20230812123349_initial_db.up.sql
scripts/: setup_db.sh
src/: main.rs
src/parser/: asura_scans.rs  mod.rs
