[package]
name = "updater-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11"
spinners = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.4.0", features = ["serde"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
] }
dotenvy = "0.15.7"
scraper = "0.17"
thiserror = "1.0.44"
anyhow = "1.0.72"
